--- a/.gitignore
+++ b/.gitignore
@@ -136,8 +136,8 @@ $RECYCLE.BIN/
 *.lnk
 
 ### Gradle ###
-.gradle
-/build/
+.gradle/**
+/build/**
 
 # Ignore Gradle GUI config
 gradle-app.setting
