--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,9 @@
       }
     },
   ],
-  "java.test.defaultConfig": "WPIlibUnitTests"
+  "java.test.defaultConfig": "WPIlibUnitTests",
+  "java.format.settings.url": ".vscode/java-formatter.xml",
+  "java.format.settings.profile": "",
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false
 }
